--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
       <title>Accueil</title>
       <link href="style.css" rel="stylesheet" type="text/css" />
     <center><nav><table id="header"><tr>
-      <th><button id="header" style="border-top-left-radius:20px; border-bottom-left-radius:20px">Composition des equipes</button></th>
-      <th><button id="header">Classement des equipes</button></th>
-      <th><img src="https://vignette.wikia.nocookie.net/baseball/images/7/7f/MontrealExpos_1000.png"/ width="250px"></th>
-      <th><button id="header">Evolution de l'equipe</button></th>
-      <th><button id="header" style="border-top-right-radius:20px; border-bottom-right-radius:20px">Les auteurs</button></th>
+      <th><a id="header" style="border-top-left-radius:20px; border-bottom-left-radius:20px" href="/composition.html">Composition des equipes</a></th>
+      <th><a id="header" href='/classement.html'>Classement des equipes</a></th>
+      <th><a href="/index.html"><img src="https://vignette.wikia.nocookie.net/baseball/images/7/7f/MontrealExpos_1000.png"/ width="250px"></a></th>
+      <th><a id="header" href="/evolution">Evolution de l'equipe</a></th>
+      <th><a id="header" style="border-top-right-radius:20px; border-bottom-right-radius:20px" href="/auteurs">Les auteurs</a></th>
     </tr></table></nav></center>
   </head>
   <body>
